--- a/ums/src/main/resources/application.yml
+++ b/ums/src/main/resources/application.yml
@@ -4,9 +4,9 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://192.168.100.157:3306/user_center
-    username: root
-    password: root
+    url: jdbc:mysql://rm-bp13la0z67v4jflf0io.mysql.rds.aliyuncs.com:3306/user_center
+    username: normal
+    password: Zmmhsf19941993
   redis:
     port: 6379
     database: 0
